@@ -2345,7 +2345,6 @@ extern vmCvar_t g_ettvFlags;
 extern vmCvar_t g_firstBloodMsg;
 extern vmCvar_t g_firstBloodMsgPos;
 extern vmCvar_t g_lastBloodMsg;
-extern vmCvar_t g_mode;
 extern vmCvar_t g_unlockedWeapons;
 
 #ifdef LUA_SUPPORT
